[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
tonic = "0.6.2"
tokio-stream = "0.1.7"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = "0.14"
warp = "0.3"
tower = "0.4"

[dependencies.tokio]
version = "1.12.0"
features = ["full"]

[build-dependencies]
tonic-build = { version = "0.6.2", features = ["prost"] }